syntax = "proto3";

option csharp_namespace = "Teams.Service";

service GrpcTeam {
    rpc GetAllTeams (GetAllRequest) returns (TeamResponse);
}

message GetAllRequest {}

message GrpcTeamModel {
    string id = 1;
    string userId = 2;
    string name = 3;
    int32 type = 4;
}

message TeamResponse {
    repeated GrpcTeamModel team = 1;
}